--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,8 +5,7 @@
     <string name="appwidget_text">EXAMPLE</string>
     <string name="configure">Configure</string>
     <string name="add_widget">Add widget</string>
-    <string name="class1_image_description">icon</string>
-    <string name="class2_image_description">icon</string>
+    <string name="icon_description">icon</string>
     <string name="empty_string">SMART PUSH</string>
 
 </resources>
